--- a/.gitignore
+++ b/.gitignore
@@ -209,6 +209,9 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,linux
 
+.*
+!/.gitignore
+
 results/*
 taxdump/*
 testing/
